# VocalRig

./: Array.hpp  CMakeLists.txt  Theme.cpp  Theme.hpp  glad.c  main.cpp
utils/: Logging.hpp
